<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all…</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="acct_inactive">Inactive</string>
    <string name="acct_unregistered">Not Registered</string>
    <string name="acct_expired">Registration Expired</string>
    <string name="acct_registering">Registering…</string>
    <string name="acct_registered">Registered</string>
    <string name="acct_regerror">Error while registering</string>
    <string name="acct_regfailed">Register Failed - Check your Configuration</string>
    <string name="permlab_useSip">Use sip</string>
    <string name="permdesc_useSip">Place SIP calls, send SIP messages</string>
    <string name="permlab_configureSip">Full access to SIP Accounts/Calls/Messages</string>
    <string name="permdesc_configureSip">Configure SIP accounts and settings, access to SIP contents (call logs, messages...), extends and hook SIP flow</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="description_dial_button">dial</string>
    <string name="description_dial_video_button">video dial</string>
    <string name="description_delete_button">backspace</string>
    <string name="description_digits_edittext">number to dial</string>
    <string name="optional_sip_code">Optional sip code</string>
    <string name="cant_call">"Can't call"</string>
    <string name="rewrite">Rewrite</string>
    <string name="stop_processing">Stop processing</string>
    <string name="direct_call">Directly call</string>
    <string name="auto_answer">Auto answer</string>
    <string name="starts_with">Starts with</string>
    <string name="ends_with">Ends with</string>
    <string name="contains">Contains</string>
    <string name="has_exactly_n_digits">Has exactly N digits</string>
    <string name="has_more_than_n_digits">Has more than N digits</string>
    <string name="is_exactly">Is exactly</string>
    <string name="custom_regexp">Custom RegExp</string>
    <string name="prefix_by">Prefix by</string>
    <string name="suffix_with">Suffix with</string>
    <string name="replace_match_by">Replace match by</string>
    <string name="replace_all_by">Replace all by</string>
    <string name="call_info_header">Has Call-Info for immediate answer</string>
    <string name="take_call">Answer</string>
    <string name="ignore_call">Ignore</string>
    <string name="reject_call">Reject</string>
    <string name="clear_call">End</string>
    <string name="touch_lock">Double tap to unlock</string>
    <string name="dialpad">DTMF</string>
    <string name="bluetooth">BlueTooth</string>
    <string name="speaker">Speaker</string>
    <string name="mute">Mute</string>
    <string name="add_call">Add call</string>
    <string name="call_state_calling">Calling…</string>
    <string name="call_state_confirmed">Talking</string>
    <string name="call_state_connecting">Connecting…</string>
    <string name="call_state_disconnected">Hung up</string>
    <string name="call_state_early">Ringing…</string>
    <string name="call_state_incoming">Incoming call…</string>
    <string name="call_state_null">ERROR</string>
    <string name="unlock">Unlock</string>
    <string name="record">Record</string>
    <string name="stop_recording">Stop recording</string>
    <string name="xfer_uri">Transfer to number</string>
    <string name="hold_call">Hold</string>
    <string name="on_hold">On Hold</string>
    <string name="resume_call">Resume</string>
    <string name="transfer_to_call">Transfer to call</string>
    <string name="send_dtmf">Send DTMF</string>
    <string name="zrtp_trust_remote">Trust ZRTP remote</string>
    <string name="zrtp_revoke_trusted_remote">Revoke trusted ZRTP remote</string>
    <string name="transport_secure_to_server">TLS transport is used for immediate hop</string>
    <string name="transport_secure_full">End-to-end signaling is supposed secure</string>
    <string name="description_direction_right">Right</string>
    <string name="description_direction_left">Left</string>
    <string name="description_direction_up">Up</string>
    <string name="unknown">Unknown</string>
    <string name="type_incoming">Incoming</string>
    <string name="type_outgoing">Outgoing</string>
    <string name="call">Call</string>
    <string name="no">Cancel</string>
    <string name="empty_description" />
    <string name="audio_quality">Audio quality</string>
    <string name="audio_volume">Volume</string>
    <string name="codecs">Codecs</string>
    <string name="echo_cancellation">Echo cancellation</string>
    <string name="echo_cancellation_desc">Activate echo cancellation</string>
    <string name="enable_vad">Voice audio detection</string>
    <string name="enable_vad_desc">Activate voice audio detection</string>
    <string name="enable_ns">Noise reduction</string>
    <string name="enable_ns_desc">Works if echo cancellation is activated and WebRTC echo canceller backend used</string>
    <string name="snd_mic_level">Micro amplification</string>
    <string name="snd_mic_level_desc">Adjust the mic signal level (1 do nothing)</string>
    <string name="snd_speaker_level">Speaker amplification</string>
    <string name="snd_speaker_level_desc">Adjust the speaker signal level (1 do nothing)</string>
    <string name="snd_bt_mic_level">Bluetooth mic amplification</string>
    <string name="snd_bt_speaker_level">Bluetooth listening amplification</string>
    <string name="snd_stream_level">Initial stream level</string>
    <string name="snd_stream_level_desc">Set the initial level for audio stream (Android stream)</string>
    <string name="snd_media_quality">Media quality</string>
    <string name="snd_media_quality_desc">Quality of the media stream (modify only if you know what you are doing)</string>
    <string name="snd_clock_rate">Clock rate</string>
    <string name="snd_clock_rate_desc">Audio channel frequency</string>
    <string name="snd_ptime">Audio frame ptime</string>
    <string name="snd_ptime_desc">The value here will affect the samples per frame of both the sound device and the conference bridge. Specifying lower ptime will normally reduce the latency.</string>
    <string name="echo_cancellation_tail">Echo cancellation tail</string>
    <string name="echo_cancellation_tail_desc">Tail length of echo cancellation</string>
    <string name="echo_mode">Echo mode</string>
    <string name="echo_mode_desc">Algorithm for echo</string>
    <string name="sip_dtmf">DTMF mode</string>
    <string name="sip_dtmf_desc">How to send DTMF</string>
    <string name="dtmf_pause_time">Time of DTMF pause</string>
    <string name="dtmf_pause_time_desc">Pause (,) separator waiting time in ms</string>
    <string name="dtmf_wait_time">Time of DTMF wait</string>
    <string name="dtmf_wait_time_desc">Wait (;) separator waiting time in ms</string>
    <string name="use_soft_volume">Use software volume</string>
    <string name="use_soft_volume_desc">Use software volume instead of android volume</string>
    <string name="has_io_queue">IO Queue</string>
    <string name="has_io_queue_desc">Activate Queue for input/output</string>
    <string name="codecs_band_types">Connections bandwidth types for codecs</string>
    <string name="auto_connect_bluetooth">Auto connect bluetooth</string>
    <string name="auto_connect_bluetooth_desc">Try to use BT SCO automatically (may break standard audio routing case)</string>
    <string name="auto_connect_speaker">Auto connect rear speaker</string>
    <string name="auto_connect_speaker_desc">Automatically use rear speaker when answering a call</string>
    <string name="auto_detect_speaker">Auto detect speaker usage</string>
    <string name="auto_detect_speaker_desc">Switch to rear speaker when phone is horizontal during a call.</string>
    <string name="codecs_per_bandwidth">Codec priority list per bandwidth</string>
    <string name="codecs_per_bandwidth_desc">Use separate codec priority lists for fast and slow networks</string>
    <string name="audio_troubleshooting">Audio troubleshooting</string>
    <string name="audio_troubleshooting_desc">Workarounds for audio routing</string>
    <string name="codecs_extra_settings">Extra codec settings</string>
    <string name="frames_per_rtp_packet">Frames per RTP packet</string>
    <string name="g729_frame_per_packet">G729 RTP frames per packet</string>
    <string name="ilbc_frame_per_packet">iLBC RTP frames per packet</string>
    <string name="codec_h264_profile">H264 profile</string>
    <string name="codec_h264_level">H264 level</string>
    <string name="codec_h264_bitrate">H264 bitrate</string>
    <string name="codec_h264_bitrate_desc">Use 0 for default for selected level</string>
    <string name="media_thread_count">Media thread count</string>
    <string name="media_thread_count_desc">Number of thread allocated for media processing</string>
    <string name="video_capture_size">Video capture size</string>
    <string name="video_capture_size_desc">Size of capture frames</string>
    <string name="codecs_availability_text">Only available if sip is currently registered</string>
    <string name="auto_record_calls">Auto record calls</string>
    <string name="auto_record_calls_desc">Record calls as soon as connected</string>
    <string name="support_multiple_calls">Support multiple calls</string>
    <string name="support_multiple_calls_desc">Allow conference and multiple concurrent calls</string>
    <string name="use_video">Use video</string>
    <string name="use_video_desc">Send video from device automatically</string>
    <string name="play_waittone_on_hold">Wait tone on hold</string>
    <string name="play_waittone_on_hold_desc">Play a tone when remote part hold</string>
    <string name="app_name">Weird Voice</string>
    <string name="cancel">Cancel</string>
    <string name="callLog_delDialog_yes">Yes</string>
    <string name="favorites_tab_name_text">Favorites</string>
    <string name="misc">Misc</string>
    <string name="video">Video</string>
    <string name="welcome_welcome">Welcome!</string>
    <string name="country">Country</string>
    <string name="register_button">REGISTER</string>
    <string name="videopromotxt">For regular calls, check our other app WICALL and make very cheap calls over your WiFi.</string>
    <string name="howtodialtxt">Dial country code (1 for USA) followed by number</string>
    <string name="goodrating">Would you agree to give me a good rating?</string>
    <string name="w_advanced_caller_id">Caller ID</string>
    <string name="w_advanced_caller_id_desc">Caller ID to send with calls</string>
</resources>