<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/audio_quality" android:key="audio_quality">
        <CheckBoxPreference android:title="@string/echo_cancellation" android:key="echo_cancellation" android:summary="@string/echo_cancellation_desc" android:defaultValue="false" />
        <EditTextPreference android:numeric="signed" android:title="@string/echo_cancellation_tail" android:key="echo_cancellation_tail" android:summary="@string/echo_cancellation_tail_desc" android:defaultValue="200" />
        <ListPreference android:entries="@array/echo_mode_choices" android:title="@string/echo_mode" android:key="echo_mode" android:summary="@string/echo_mode_desc" android:defaultValue="2" android:entryValues="@array/echo_mode_values" />
        <CheckBoxPreference android:title="@string/enable_vad" android:key="enable_vad" android:summary="@string/enable_vad_desc" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/enable_ns" android:key="enable_ns" android:summary="@string/enable_ns_desc" android:dependency="echo_cancellation" android:defaultValue="false" />
        <EditTextPreference android:numeric="signed" android:title="@string/snd_media_quality" android:key="snd_media_quality" android:summary="@string/snd_media_quality_desc" android:defaultValue="4" />
        <ListPreference android:entries="@array/clock_rate_choices" android:title="@string/snd_clock_rate" android:key="snd_clock_rate" android:summary="@string/snd_clock_rate_desc" android:defaultValue="8000" android:entryValues="@array/clock_rate_values" />
        <EditTextPreference android:numeric="signed" android:title="@string/snd_ptime" android:key="snd_ptime" android:summary="@string/snd_ptime_desc" android:defaultValue="20" />
        <CheckBoxPreference android:title="@string/has_io_queue" android:key="has_io_queue" android:summary="@string/has_io_queue_desc" android:defaultValue="false" />
    </PreferenceCategory>
    <EditTextPreference android:numeric="signed" android:title="@string/media_thread_count" android:key="media_thread_count" android:summary="@string/media_thread_count_desc" android:defaultValue="1" />
    <CheckBoxPreference android:title="@string/codecs_per_bandwidth" android:key="codecs_per_bandwidth" android:summary="@string/codecs_per_bandwidth_desc" android:defaultValue="true" />
    <PreferenceScreen android:title="@string/codecs" android:key="codecs_list" android:summary="@string/codecs_availability_text" />
    <PreferenceScreen android:title="@string/codecs_band_types" android:key="band_types" android:dependency="codecs_per_bandwidth" />
    <PreferenceScreen android:title="@string/codecs_extra_settings" android:key="codecs_extra_settings">
        <PreferenceCategory android:title="@string/frames_per_rtp_packet">
            <EditTextPreference android:numeric="signed" android:title="@string/g729_frame_per_packet" android:key="codec_g729_8000_fpp" />
            <EditTextPreference android:numeric="signed" android:title="@string/ilbc_frame_per_packet" android:key="codec_ilbc_8000_fpp" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/video">
            <ListPreference android:entries="@array/h264_profile_choices" android:title="@string/codec_h264_profile" android:key="codec_h264_profile" android:defaultValue="66" android:entryValues="@array/h264_profile_values" />
            <ListPreference android:entries="@array/h264_level_choices" android:title="@string/codec_h264_level" android:key="codec_h264_level" android:defaultValue="0" android:entryValues="@array/h264_level_values" />
            <EditTextPreference android:numeric="signed" android:title="@string/codec_h264_bitrate" android:key="codec_h264_bitrate" android:summary="@string/codec_h264_bitrate_desc" android:defaultValue="0" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceCategory android:title="@string/audio_volume" android:key="audio_volume">
        <com.weirdvoice.widgets.SeekBarPreference android:max="15" android:text="dB" android:title="@string/snd_mic_level" android:key="snd_mic_level" android:summary="@string/snd_mic_level_desc" android:defaultValue="1.0" />
        <com.weirdvoice.widgets.SeekBarPreference android:max="15" android:text="dB" android:title="@string/snd_speaker_level" android:key="snd_speaker_level" android:summary="@string/snd_speaker_level_desc" android:defaultValue="1.0" />
        <com.weirdvoice.widgets.SeekBarPreference android:max="15" android:text="dB" android:title="@string/snd_bt_mic_level" android:key="snd_bt_mic_level" android:summary="@string/snd_mic_level_desc" android:defaultValue="1.0" />
        <com.weirdvoice.widgets.SeekBarPreference android:max="15" android:text="dB" android:title="@string/snd_bt_speaker_level" android:key="snd_bt_speaker_level" android:summary="@string/snd_speaker_level_desc" android:defaultValue="1.0" />
        <com.weirdvoice.widgets.SeekBarPreference android:max="10" android:title="@string/snd_stream_level" android:key="snd_stream_level" android:summary="@string/snd_stream_level_desc" android:defaultValue="8.0" />
        <CheckBoxPreference android:title="@string/use_soft_volume" android:key="use_soft_volume" android:summary="@string/use_soft_volume_desc" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/misc" android:key="misc">
        <CheckBoxPreference android:title="@string/auto_connect_bluetooth" android:key="auto_connect_bluetooth" android:summary="@string/auto_connect_bluetooth_desc" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/auto_connect_speaker" android:key="auto_connect_speaker" android:summary="@string/auto_connect_speaker_desc" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/auto_detect_speaker" android:key="auto_detect_speaker" android:summary="@string/auto_detect_speaker_desc" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/video" android:key="video_category">
        <ListPreference android:title="@string/video_capture_size" android:key="video_capture_size" android:summary="@string/video_capture_size_desc" android:defaultValue="" />
    </PreferenceCategory>
    <PreferenceScreen android:title="@string/audio_troubleshooting" android:key="audio_troubleshooting" android:summary="@string/audio_troubleshooting_desc" />
</PreferenceScreen>