<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:title="@string/w_advanced_caller_id" android:key="default_caller_id" android:summary="@string/w_advanced_caller_id_desc" android:defaultValue="" />
    <CheckBoxPreference android:title="@string/auto_record_calls" android:key="auto_record_calls" android:summary="@string/auto_record_calls_desc" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/support_multiple_calls" android:key="support_multiple_calls" android:summary="@string/support_multiple_calls_desc" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/use_video" android:key="use_video" android:summary="@string/use_video_desc" android:defaultValue="false" />
    <PreferenceCategory android:title="@string/misc" android:key="misc">
        <ListPreference android:entries="@array/dtmf_mode_choices" android:title="@string/sip_dtmf" android:key="dtmf_mode" android:summary="@string/sip_dtmf_desc" android:defaultValue="0" android:entryValues="@array/dtmf_mode_values" />
        <EditTextPreference android:numeric="signed" android:title="@string/dtmf_pause_time" android:key="dtmf_pause_time" android:summary="@string/dtmf_pause_time_desc" android:defaultValue="300" />
        <EditTextPreference android:numeric="signed" android:title="@string/dtmf_wait_time" android:key="dtmf_wait_time" android:summary="@string/dtmf_wait_time_desc" android:defaultValue="2000" />
        <CheckBoxPreference android:title="@string/play_waittone_on_hold" android:key="play_waittone_on_hold" android:summary="@string/play_waittone_on_hold_desc" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>