<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="#ff4c4c4c" android:layout_width="fill_parent" android:layout_height="0.00999999dip" />
    <LinearLayout android:orientation="horizontal" android:background="#ffffffff" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/ImageView01" android:padding="5.0dip" android:layout_width="70.0dip" android:layout_height="70.0dip" android:src="@drawable/me" />
        <TextView android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center_vertical" android:background="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/goodrating" />
    </LinearLayout>
    <View android:background="#ff4c4c4c" android:layout_width="fill_parent" android:layout_height="0.00999999dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/ButtonBar.AlertDialog">
        <Button android:id="@id/helpno" android:layout_width="0.0dip" android:layout_height="fill_parent" android:minWidth="120.0dip" android:text="@string/no" android:layout_weight="0.5" style="@style/ButtonBarButton" />
        <Button android:id="@id/helpyes" android:layout_width="0.0dip" android:layout_height="fill_parent" android:minWidth="120.0dip" android:text="@string/callLog_delDialog_yes" android:layout_weight="0.5" style="@style/ButtonBarButton" />
    </LinearLayout>
</LinearLayout>