<?xml version="1.0" encoding="utf-8"?>
<com.weirdvoice.ui.dialpad.DialerLayout android:orientation="vertical" android:id="@id/top_digit_dialer" android:paddingTop="@dimen/right_panel_margin_vertical" android:paddingBottom="@dimen/right_panel_margin_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/topField" android:background="@drawable/btn_dial_textfield" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="0.0dip" android:layout_weight="@integer/dialpad_layout_weight_digits">
        <View android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" />
        <ImageButton android:id="@id/switchTextView" android:background="@drawable/btn_dial_textbadge" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_tab_unselected_contacts" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1.0">
            <com.weirdvoice.ui.dialpad.DigitsEditText android:textAppearance="@style/DialtactsDigitsTextAppearance" android:textSize="24.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/digitsText" android:background="@android:color/transparent" android:nextFocusRight="@id/country" android:layout_width="fill_parent" android:layout_height="43.0dip" android:cursorVisible="false" android:maxLines="1" android:scrollHorizontally="true" android:maxLength="16" android:freezesText="true" android:layout_weight="1.0" android:imeOptions="actionGo" android:imeActionLabel="@string/call" android:contentDescription="@string/description_digits_edittext" />
            <TextView android:textSize="12.0sp" android:textColor="#ffffff00" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/countryy" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/howtodialtxt" android:freezesText="true" />
        </LinearLayout>
        <TextView android:textSize="10.0sp" android:textStyle="italic" android:textColor="#88ffffff" android:gravity="center" android:id="@id/rewriteTextInfo" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <com.weirdvoice.widgets.AccountChooserButton android:id="@id/accountChooserButton" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        <ImageButton android:state_enabled="false" android:layout_gravity="center" android:id="@id/deleteButton" android:background="@drawable/btn_dial_delete" android:layout_width="43.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_dial_action_delete" android:contentDescription="@string/description_delete_button" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/dialpad_background" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:state_enabled="true" android:layout_gravity="center_vertical" android:id="@id/img_fav" android:background="@drawable/btn_compound_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:src="@drawable/ic_ab_favourites_holo_dark" />
        <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <ImageView android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/img_flag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:src="@drawable/flag" />
        <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/weirdl" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="4.0dip">
            <ImageButton android:layout_gravity="center" android:id="@id/weird_btn" android:background="@drawable/icon_weirdvoice" android:layout_width="32.0dip" android:layout_height="32.0dip" />
        </LinearLayout>
    </LinearLayout>
    <View android:background="#66000000" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <ListView android:id="@id/autoCompleteList" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="@integer/dialpad_layout_weight_autocomplete_list" />
    <include layout="@layout/dialpad_compose" />
</com.weirdvoice.ui.dialpad.DialerLayout>